--- a/Lead_FrontEnd/select.html
+++ b/Lead_FrontEnd/select.html
@@ -9,7 +9,7 @@
         </script>
 </head>
 <body>  
-    <div id="leads"></div>
+    <div id="content"></div>
      <script src='../crm.js'></script> 
 </body>
 </html>
