--- a/Lead_FrontEnd/create.html
+++ b/Lead_FrontEnd/create.html
@@ -9,7 +9,7 @@
         </script>
 </head>
 <body>  
-    <form method="post" action="../crmApi.php">
+    <form method="post" action="../server/crmApi.php">
         <fieldset>
             <legend>Create Lead</legend>
             <label>Name: <input type="text" name="leadName" maxlength="45"></label>
