--- a/Lead_FrontEnd/createAJAX.html
+++ b/Lead_FrontEnd/createAJAX.html
@@ -16,7 +16,7 @@
         <label>Product: <select id="ProductDDL"  name="product"></select></label>
         <input  type="hidden"  name="action" value="AddLead" >
         <br><br>
-        <button id="btnAddLead"  name="action" value="AddLead">Add Lead</button>
+        <button class="btnAdd"  name="action" value="AddLead">Add Lead</button>
     </fieldset>    
     <script src='../crm.js'></script> 
 </body>
