--- a/Lead_FrontEnd/select.html
+++ b/Lead_FrontEnd/select.html
@@ -2,14 +2,20 @@
 <html>
 <head>
     <title>Show Leads</title>
-        <script
-            src="http://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous">
-        </script>
+    <link rel="stylesheet" href="../css/crm.css"/> 
+    <script
+        src="http://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous">
+    </script>
 </head>
 <body>  
-    <div id="content"></div>
+    <section class='container'>
+        <h2>leads</h2>
+        <div class='row leads'>
+           
+        </div>
+    </section>
      <script src='../crm.js'></script> 
 </body>
 </html>
