--- a/Lead_FrontEnd/create.html
+++ b/Lead_FrontEnd/create.html
@@ -19,6 +19,6 @@
             <button name="action" value="AddLead">Add Lead</button>
         </fieldset>    
     </form>
-    <script src='../crm.js'></script> 
+    <script src='../js/crm.js'></script> 
 </body>
 </html>
