--- a/Lead_FrontEnd/createAJAX.html
+++ b/Lead_FrontEnd/createAJAX.html
@@ -18,6 +18,6 @@
         <br><br>
         <button class="btnAdd"  name="action" value="AddLead">Add Lead</button>
     </fieldset>    
-    <script src='../crm.js'></script> 
+    <script src='../js/crm.js'></script> 
 </body>
 </html>
