--- a/Lead_FrontEnd/select.html
+++ b/Lead_FrontEnd/select.html
@@ -12,10 +12,9 @@
 <body>  
     <section class='container'>
         <h2>leads</h2>
-        <div class='row leads'>
-           
+            <div class='row leads'>
         </div>
     </section>
-     <script src='../crm.js'></script> 
+     <script src='../js/crm.js'></script> 
 </body>
 </html>
