--- a/Prospect_FrontEnd/select.html
+++ b/Prospect_FrontEnd/select.html
@@ -10,6 +10,6 @@
 </head>
 <body>  
     <div id="content"></div>
-     <script src='../crm.js'></script> 
+     <script src='../js/crm.js'></script> 
 </body>
 </html>
