--- a/Lead_FrontEnd/create.html
+++ b/Lead_FrontEnd/create.html
@@ -4,23 +4,31 @@
     <title>Create Lead</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" 
         integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" 
-        integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <script
         src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
     </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" 
+        integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../css/crm.css"/> 
 </head>
 <body>  
-    <fieldset .form-group>
-        <legend>Create Lead</legend>
-        <label>Name: <input type="text" name="leadName" maxlength="45"></label>
-        <label>Phone: <input type="text" name="leadPhone" maxlength="10"></label>
-        <label>Product: <select id="ProductDDL"  name="product"></select></label>
-        <input  type="hidden"  name="action" value="AddLead" >
+    <form .form-group>
+        <h1>Create Lead</h1>
+        <div class="form-group">
+            <label>Name: <input type="text" name="leadName" maxlength="45"></label>
+        </div>
+        <div class="form-group">
+            <label>Phone: <input type="text" name="leadPhone" maxlength="10"></label>
+        </div>
+        <div class="form-group">
+            <label>Product: <select id="ProductDDL"  name="product"></select></label>
+            <input  type="hidden"  name="action" value="AddLead" >
+        </div>
+        <div class="form-group">
         <br><br>
         <button class="btnAdd"  name="action" value="AddLead">Add Lead</button>
-    </fieldset>    
+      </div>
+    </form>  
     <script src='../js/crm.js'></script> 
 </body>
 </html>
