--- a/Lead_FrontEnd/create.html
+++ b/Lead_FrontEnd/create.html
@@ -2,33 +2,41 @@
 <html>
 <head>
     <title>Create Lead</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" 
-        integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <script
-        src="http://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous">
-    </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" 
-        integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"   crossorigin="anonymous">
+    <!-- site css file placed after bootstrap files to enable overriding of bootstrap styles --> 
     <link rel="stylesheet" href="../css/crm.css"/> 
-</head>
-<body>  
-    <form .form-group>
-        <h1>Create Lead</h1>
-        <div class="form-group">
-            <label>Name: <input type="text" name="leadName" maxlength="45"></label>
-        </div>
-        <div class="form-group">
-            <label>Phone: <input type="text" name="leadPhone" maxlength="10"></label>
-        </div>
-        <div class="form-group">
-            <label>Product: <select id="ProductDDL"  name="product"></select></label>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+                 integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
+    </script>
+    
+    </head>
+<body> 
+    <h1>Create Lead</h1>
+    <main class="center-block">
+        <div id="merkaz"> 
+            <fieldset>
+            <div class="form-group">
+                <label class="input-description">Name:</label>
+                <input type="text"  class="form-control" name="leadName" placeholder="Enter new Lead name" maxlength="45">
+            </div>
+            <div class="form-group">
+                <label  class="input-description">Phone:</label>
+                <input type="text"  class="form-control" name="leadPhone" placeholder="Enter new Lead phone#" maxlength="10">
+            </div>
+            <div class="form-group">
+                <label  class="input-description">Product:</label>
+                <select id="ProductDDL"  class="form-control" name="product"  placeholder="Select Product" ></select>
+            </div>
             <input  type="hidden"  name="action" value="AddLead" >
-        </div>
-        <div class="form-group">
-        <br><br>
-        <button class="btnAdd"  name="action" value="AddLead">Add Lead</button>
+            <div class="form-group">
+                <br><br>
+                <button class="btnAdd btn btn-primary"  name="action" value="AddLead">Add Lead</button>
+            </div>
+            </fieldset>
       </div>
-    </form>  
+    </main>  
     <script src='../js/crm.js'></script> 
 </body>
 </html>
