--- a/Lead_FrontEnd/create.html
+++ b/Lead_FrontEnd/create.html
@@ -2,16 +2,24 @@
 <html>
 <head>
     <title>Create Lead</title>
+    -
+    <!-- <link href="../css/Styles/ui-lightness/jquery-ui-1.8.13.custom.css"        rel="stylesheet" type="text/css" /> -->
+    <link href="../css/Styles/Site.css" rel="stylesheet" type="text/css" />
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
           integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"   crossorigin="anonymous">
     <!-- site css file placed after bootstrap files to enable overriding of bootstrap styles --> 
     <link rel="stylesheet" href="../css/crm.css"/> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
+    <script src='../js/Scripts/jquery-ui-1.8.13.custom.min.js'></script> 
+    <!-- <script src='../js/Scripts/jquery.validate.min.js'></script>  -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
+    <script src='../js/Scripts/jquery.validate.wrapper.js'></script> 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
                  integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
     </script>
-    
-    </head>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>     -->
+</head>
 <body>
     <form id="frmCUD"> 
         <h1>Create Lead</h1>
@@ -36,9 +44,9 @@
                 </div>
             </div>
         </main> 
-    </form>     
+    </form> 
+    <!-- <script src='../js/validations.js'></script>  -->
     <script src='../js/crm.js'></script> 
-    <script src='../js/validations.js'></script> 
-    <script src='../js/jquery.validate.js'></script> 
+    
 </body>
 </html>
