--- a/Lead_FrontEnd/select.html
+++ b/Lead_FrontEnd/select.html
@@ -27,7 +27,7 @@
             <tbody class='leads'></tbody>
         </table>
     </section>
-    <script src='../js/crm.js'></script> 
+    <script src='../js/crmGeneral.js'></script> 
 </body>
 </html>
 
