--- a/Lead_FrontEnd/create.html
+++ b/Lead_FrontEnd/create.html
@@ -22,17 +22,17 @@
                         <tr>
                             <td class="title">Lead Name</td>
                             <td class="content"><input type="text"  class="form-control" name="leadName" placeholder="Enter new Lead name" maxlength="45"></td>
-                            <td class="zerror-td"><label class="error"></label></td>
+                            <td class="error-td"><label class="error"></label></td>
                         </tr>
                         <tr>
                             <td class="title">Lead Phone</td>
                             <td class="content"><input type="text"  class="form-control" name="leadPhone" placeholder="Enter new Lead phone#" maxlength="10"></td>
-                            <td class="zerror-td"><label class="error"></label></td>
+                            <td class="error-td"><label class="error"></label></td>
                         </tr>
                         <tr>
                             <td class="title">Lead Product</td>
                             <td class="content"><select id="ProductDDL"  class="form-control" name="product"  placeholder="Select Product" ></select></td>
-                            <td class="zerror-td"><label class="error"></label></td>
+                            <td class="error-td"><label class="error"></label></td>
                         </tr>
                     </tbody>
                 </table>
