--- a/Lead_FrontEnd/delete.html
+++ b/Lead_FrontEnd/delete.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Show Leads</title>
+    <title>Delete Lead</title>
     <link rel="stylesheet"    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"      crossorigin="anonymous">
     <!-- site css file placed after bootstrap files to enable overriding of bootstrap styles --> 
@@ -13,7 +13,7 @@
 </head>
 <body>  
     <section class='container'>
-        <h1>Leads</h1>
+        <h1>Delete Lead</h1>
         <div id="LeadsTable" >
         </div>
     </section>
