--- a/Lead_FrontEnd/delete.html
+++ b/Lead_FrontEnd/delete.html
@@ -11,10 +11,11 @@
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
     </script>
 </head>
-<body>  
+<body> 
     <section class='container'>
         <h1>Delete Lead</h1>
-        <div id="LeadsTable" >
+        <h3>Click row you wish to delete</h3>
+        <div id="LeadsTable">
         </div>
     </section>
     <script src='../js/crmGeneral.js'></script> 
