--- a/‫index.html
+++ b/‫index.html
@@ -25,7 +25,7 @@
               <ul class="dropdown-menu">
                 <li><a href="Lead_FrontEnd/select.html">Show Leads</a></li>
                 <li><a href="Lead_FrontEnd/create.html">Create Lead</a></li>
-                <li><a href="#">Update Lead</a></li>
+                <li><a href="Lead_FrontEnd/update.html">Update Lead</a></li>
                 <li><a href="Lead_FrontEnd/delete.html">Delete Lead</a></li>
             </ul>
             </li>
