--- a/Lead_FrontEnd/create.html
+++ b/Lead_FrontEnd/create.html
@@ -16,26 +16,7 @@
     <form id="frmCUD"> 
         <h1>Create Lead</h1>
         <main class="center-block">
-            <div id="merkaz">
-                <table id="tblCUD" class="table table-responsive">
-                    <tbody>
-                        <tr>
-                            <td class="title">Lead Name</td>
-                            <td class="content"><input type="text"  class="form-control" name="leadName" placeholder="Enter new Lead name" maxlength="45"></td>
-                            <td class="error-td"><label class="error"></label></td>
-                        </tr>
-                        <tr>
-                            <td class="title">Lead Phone</td>
-                            <td class="content"><input type="text"  class="form-control" name="leadPhone" placeholder="Enter new Lead phone#" maxlength="10"></td>
-                            <td class="error-td"><label class="error"></label></td>
-                        </tr>
-                        <tr>
-                            <td class="title">Lead Product</td>
-                            <td class="content"><select id="ProductDDL"  class="form-control" name="product"  placeholder="Select Product" ></select></td>
-                            <td class="error-td"><label class="error"></label></td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div id="CreateUpdateDiv">
                 <input  type="hidden"  name="action" value="AddLead" >
                 <div class="form-group">
                     <br><br>
