--- a/Lead_FrontEnd/update.html
+++ b/Lead_FrontEnd/update.html
@@ -3,22 +3,32 @@
 <head>
     <title>Update Lead</title>
     <link rel="stylesheet"    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"      crossorigin="anonymous">
-    <!-- site css file placed after bootstrap files to enable overriding of bootstrap styles --> 
-    <link rel="stylesheet" href="../css/crm.css"/> 
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"      crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
+    <!-- site css file placed after bootstrap files to enable overriding of bootstrap styles --> 
+    <link rel="stylesheet" href="../css/crm.css"/> 
 </head>
 <body> 
     <section class='container'>
-        <h1>Delete Lead</h1>
+        <h1>Update Lead</h1>
         <h3>Click row you wish to update</h3>
         <div id="LeadsTable">
         </div>
+        <form id="frmCUD">
+            <div id="CreateUpdateDiv">
+                <input  type="hidden"  name="action" value="UpdateLead" >
+                <div class="form-group">
+                    <button class="btnAdd btn btn-primary" id="btnUpdateLead" name="action" value="UpdateLead">Update Lead</button>
+                </div>
+            </div>
+        </form>
     </section>
     <script src='../js/crmGeneral.js'></script> 
+    <script src='../js/validations.js'></script> 
 </body>
 </html>
 
