--- a/Lead_FrontEnd/select.html
+++ b/Lead_FrontEnd/select.html
@@ -4,7 +4,8 @@
     <title>Show Leads</title>
     <link rel="stylesheet"    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"      crossorigin="anonymous">
-    <!-- site css file placed after bootstrap files to enable overriding of bootstrap styles --> 
+    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
+    <link rel="stylesheet/less" type="text/css" href="styles.less" /> -->
     <link rel="stylesheet" href="../css/crm.css"/> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
