--- a/Lead_FrontEnd/create.html
+++ b/Lead_FrontEnd/create.html
@@ -28,6 +28,7 @@
         </main> 
     </form> 
     <script src='../js/crmGeneral.js'></script> 
+    <script src='../js/lead.js'></script> 
     <script src='../js/validations.js'></script> 
 </body>
 </html>
