--- a/Lead_FrontEnd/delete.html
+++ b/Lead_FrontEnd/delete.html
@@ -21,6 +21,7 @@
         </div>
     </section>
     <script src='../js/crmGeneral.js'></script> 
+    <script src='../js/lead.js'></script> 
 </body>
 </html>
 
