--- a/Lead_FrontEnd/select.html
+++ b/Lead_FrontEnd/select.html
@@ -18,6 +18,7 @@
         <div id="LeadsTable" >
         </div>
     </section>
+    <script src='../js/lead.js'></script> 
     <script src='../js/crmGeneral.js'></script> 
 </body>
 </html>
