--- a/Lead_FrontEnd/update.html
+++ b/Lead_FrontEnd/update.html
@@ -33,6 +33,7 @@
         </form>
     </section>
     <script src='../js/crmGeneral.js'></script> 
+    <script src='../js/lead.js'></script> 
     <script src='../js/validations.js'></script> 
 </body>
 </html>
