--- a/Lead_FrontEnd/create.html
+++ b/Lead_FrontEnd/create.html
@@ -10,9 +10,8 @@
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.js"></script>
     <!-- site css file placed after bootstrap files to enable overriding of bootstrap styles --> 
-    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
-    <link rel="stylesheet/less" type="text/css" href="../css/styles.less" /> -->
-    <link rel="stylesheet" href="../css/crm.css"/> 
+    <link rel="stylesheet/less" type="text/css" href="../css/crm.less" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
 </head>
 <body>
     <form id="frmCUD"> 
