--- a/‫index.html
+++ b/‫index.html
@@ -6,8 +6,9 @@
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"      crossorigin="anonymous">
     <!-- site css file placed after bootstrap files to enable overriding of bootstrap styles --> 
     <!-- <link rel="stylesheet/less" type="text/css" href="css/styles.less" /> -->
-    <link rel="stylesheet" href="../css/crm.css"/> 
+    <link rel="stylesheet/less" type="text/css" href="css/crm.less" />
     <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.min.js"></script>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
